Make previews pairable and manage revisions
